scrollbar issue solved (finaly)

--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,17 @@
 @tailwind components;
 @tailwind utilities;
 
-* {}
+html {
+    scrollbar-color: #aaa transparent;
+}
 
 body {
     background-color: #0f0f0f;
     max-width: 100vw;
+    overflow-y: auto;
+    overflow-x: hidden;
     scrollbar-gutter: "stable";
+    -webkit-scrollbar-gutter: stable;
 }
 
 .sidebar-height {
@@ -19,27 +24,4 @@ body {
 .homepage-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-}
-
-
-/* *::-webkit-scrollbar {
-    @apply bg-neutral-800 w-3;
-}
-
-*::-webkit-scrollbar-thumb {
-    @apply bg-neutral-400;
-} */
-
-::-webkit-scrollbar {
-    width: 0.1rem;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.782);
-    border-radius: 0.3rem;
-}
-
-::-webkit-scrollbar-track {
-    background-color: transparent;
-    border-radius: 0.25rem;
 }
